mofification page contact

--- a/style.css
+++ b/style.css
@@ -772,6 +772,9 @@ h4 {
 .bgc-atomic-tangerine {
     background-color: #F3976C;
 }
+.bgc-atomic-contact {
+    background-color: #754F3F;
+}
 .bgc-atomic-footer {
     background-color: #8D4512;
 }
