--- a/style.css
+++ b/style.css
@@ -785,12 +785,12 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #8D4512;
-    color: #FFFFFF!important;
+    color: #FFFFFF;
 }
 
 .btn-atomic-tangerine:hover {
-    background: #c27956!important;
-    color: #FFFFFF!important;
+    background: #c27956;
+    color: #000 !important;
 }
 
 .ltc-white {
