--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6143,9 +6143,9 @@ a.thumbnail:hover {
 }
 
 .alert-warning {
-  color: #8a6d3b;
-  background-color: #fcf8e3;
-  border-color: #faebcc;
+  color: white;
+  background-color: #b60000;
+  border-color: #b60000;
 }
 
 .alert-warning hr {
